k8s/manifests/wicstock-core/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wicstock-core
  labels:
    app.kubernetes.io/part-of: wicstock
    environment: dev
