k8s/manifests/wicstock-core/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: wicstock-core
  labels:
    app: postgres
    app.kubernetes.io/part-of: wicstock
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: postgres
