k8s/manifests/wicstock-core/09-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wicstock-core
  labels:
    app: backend
    app.kubernetes.io/part-of: wicstock
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: backend
