k8s/manifests/wicstock-core/11-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wicstock-core
  labels:
    app: frontend
    app.kubernetes.io/part-of: wicstock
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend
